--- a/index.html
+++ b/index.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Home | Cyber Awareness at IAA </title>
+  <title>Cyber Awareness | IAA</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
-
   <style>
     * {
       scroll-behavior: smooth;
@@ -13,19 +12,18 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f4f9;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(to bottom, #fef9ff, #f1fcf9);
       margin: 0;
       padding: 0;
     }
 
     header {
-      background-color: #333;
+      background: linear-gradient(45deg, #ff6f61, #ab47bc);
       color: white;
       padding: 15px;
       text-align: center;
       animation: fadeInDown 1s ease;
-      z-index: 10;
     }
 
     nav {
@@ -37,20 +35,19 @@
 
     nav a {
       color: white;
-      margin: 5px 15px;
+      margin: 6px 18px;
       text-decoration: none;
       font-size: 16px;
-      transition: color 0.3s;
+      transition: color 0.3s ease;
     }
 
     nav a:hover {
-      text-decoration: underline;
-      color: #1a73e8;
+      color: #fff59d;
     }
 
     .hero-section {
-      background: url('hero-image.jpg') no-repeat center center/cover;
-      color: white;
+      background: linear-gradient(135deg, #e0f2f1, #ffe0b2);
+      color: #333;
       text-align: center;
       padding: 60px 20px;
       animation: fadeIn 2s ease;
@@ -59,143 +56,79 @@
     .hero-section h1 {
       font-size: 48px;
       margin-bottom: 20px;
-      color: #1a73e8;
+      color: #7e57c2;
     }
 
     .hero-section p {
-      font-size: 24px;
-      margin-bottom: 30px;
-      color: #333;
-    }
-
-    .cta-button {
-      background-color: #007bff;
-      color: white;
-      padding: 15px 30px;
-      font-size: 20px;
-      text-decoration: none;
-      border-radius: 5px;
-      transition: background-color 0.3s, transform 0.2s;
-      display: inline-block;
-    }
-
-    .cta-button:hover {
-      background-color: #0056b3;
-      transform: scale(1.05);
+      font-size: 22px;
+      margin: 0 auto;
+      max-width: 800px;
+      color: #555;
     }
 
     .content-section {
       display: flex;
       justify-content: space-around;
       padding: 40px 20px;
-      background-color: #f9f9f9;
+      background-color: #fffdfd;
       flex-wrap: wrap;
     }
 
     .content-box {
-      background-color: white;
-      padding: 20px;
-      border-radius: 8px;
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      background: white;
+      padding: 24px;
+      border-radius: 14px;
+      box-shadow: 0 6px 20px rgba(0,0,0,0.1);
       width: 30%;
       text-align: center;
       margin: 15px;
       animation: fadeInUp 1s ease forwards;
+      transition: transform 0.3s;
+    }
+
+    .content-box:hover {
+      transform: scale(1.03);
     }
 
     .content-box i {
-      font-size: 40px;
-      color: #1a73e8;
+      font-size: 42px;
+      color: #ff7043;
       margin-bottom: 15px;
     }
 
     .content-box h3 {
       margin-bottom: 15px;
       font-size: 24px;
-      color: #1a73e8;
+      color: #ab47bc;
     }
 
     .content-box p {
       font-size: 16px;
+      color: #555;
     }
 
-    .content-box .cta-button {
-      font-size: 16px;
+    .cta-button {
+      display: inline-block;
+      font-size: 15px;
       padding: 10px 20px;
       margin-top: 15px;
+      background-color: #ff5252;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    .cta-button:hover {
+      background-color: #e53935;
     }
 
     footer {
-      background-color: #333;
+      background: #7e57c2;
       color: white;
       padding: 15px;
       text-align: center;
-      margin-top: 40px;
-    }
-
-    /* Chatbot */
-    #chatbot {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      width: 300px;
-      height: 400px;
-      border: 1px solid #ccc;
-      background: white;
-      border-radius: 10px;
-      display: flex;
-      flex-direction: column;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      z-index: 9999;
-    }
-
-    #chatbot-header {
-      background: #1a73e8;
-      color: white;
-      padding: 10px;
-      text-align: center;
-      font-weight: bold;
-      border-top-left-radius: 10px;
-      border-top-right-radius: 10px;
-    }
-
-    #chat-log {
-      flex: 1;
-      padding: 10px;
-      overflow-y: auto;
-      font-size: 14px;
-    }
-
-    #chat-input {
-      display: flex;
-      border-top: 1px solid #ccc;
-    }
-
-    #chat-input input {
-      flex: 1;
-      padding: 10px;
-      border: none;
-      outline: none;
-    }
-
-    #chat-input button {
-      padding: 10px;
-      background: #1a73e8;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-
-    .message.user {
-      text-align: right;
-      color: #1a73e8;
-      margin-bottom: 5px;
-    }
-
-    .message.bot {
-      text-align: left;
-      color: #333;
-      margin-bottom: 5px;
     }
 
     @media (max-width: 768px) {
@@ -208,13 +141,115 @@
         width: 90%;
       }
 
-      #chatbot {
-        width: 90%;
-        right: 5%;
+      .hero-section h1 {
+        font-size: 36px;
+      }
+
+      .hero-section p {
+        font-size: 18px;
       }
     }
 
-    /* Animations */
+    /* Chatbot Style */
+    #chat-toggle {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #7c4dff;
+      color: white;
+      padding: 12px 20px;
+      border-radius: 30px;
+      cursor: pointer;
+      font-weight: bold;
+      z-index: 9999;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.2);
+    }
+
+    #chat-toggle:hover {
+      background-color: #651fff;
+    }
+
+    #chat-container {
+      display: none;
+      flex-direction: column;
+      position: fixed;
+      bottom: 80px;
+      right: 20px;
+      width: 320px;
+      height: 460px;
+      background: linear-gradient(to bottom right, #1a237e, #0d47a1);
+      color: white;
+      border-radius: 12px;
+      overflow: hidden;
+      font-family: Arial, sans-serif;
+      z-index: 9999;
+    }
+
+    #chat-header {
+      background-color: #283593;
+      padding: 10px;
+      font-weight: bold;
+      text-align: center;
+      color: #ffccbc;
+    }
+
+    #chat-messages {
+      flex: 1;
+      padding: 10px;
+      overflow-y: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      background: #0e1444;
+    }
+
+    .message {
+      font-size: 14px;
+      max-width: 80%;
+    }
+
+    .message.user {
+      align-self: flex-end;
+      background: #f06292;
+      color: white;
+      padding: 8px 12px;
+      border-radius: 12px 12px 0 12px;
+    }
+
+    .message.bot {
+      align-self: flex-start;
+      background: #4db6ac;
+      color: black;
+      padding: 8px 12px;
+      border-radius: 12px 12px 12px 0;
+    }
+
+    #chat-input {
+      display: flex;
+      border-top: 1px solid #333;
+    }
+
+    #chat-input input {
+      flex: 1;
+      padding: 10px;
+      border: none;
+      outline: none;
+      background: #212121;
+      color: white;
+    }
+
+    #chat-input button {
+      padding: 10px;
+      background: #ff7043;
+      border: none;
+      cursor: pointer;
+      color: white;
+    }
+
+    #chat-input button:hover {
+      background: #f4511e;
+    }
+
     @keyframes fadeIn {
       0% { opacity: 0; }
       100% { opacity: 1; }
@@ -235,256 +270,98 @@
 
   <header>
     <h1>Cyber Awareness</h1>
-        <p>  IAA </p>
+    <p>Institute of Accountancy Arusha (IAA)</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
       <a href="courses.html">Courses</a>
       <a href="security-tools.html">Security Tools</a>
-      <a href="phishing-simulation.html">Phishing detection</a>
+      <a href="phishing-simulation.html">Phishing Detection</a>
     </nav>
   </header>
 
-  <!-- Hero Section -->
   <section class="hero-section">
-    <h1>Welcome to Cyber Awareness at The Institute of Accountancy Arusha</h1>
-    <p>Empowering individuals and the digital world to stay safe online.</p>
-    <a href="courses.html" class="cta-button">Start Learning</a>
+    <h1>Welcome to Cyber Awareness at IAA</h1>
+    <p>Master the digital world with smart tools, phishing defense, and password protection — all powered by AI.</p>
   </section>
 
-  <!-- Content Section -->
   <section class="content-section">
-    <div class="content-box">
-      <i class="fas fa-graduation-cap"></i>
-      <h3>Interactive Courses</h3>
-      <p>Learn about the latest cybersecurity trends and how to protect yourself online. Our courses are designed for all levels.</p>
-      <a href="courses.html" class="cta-button">Explore Courses</a>
-    </div>
-
-    <div class="content-box">
-      <i class="fas fa-shield-alt"></i>
-      <h3>Phishing Detection</h3>
-      <p>AI-based detector that analyzes URL and give smart recommendations based on the detected flags in the link</p>
-      <a href="phishing-simulation.html" class="cta-button">Try detection</a>
-    </div>
-
     <div class="content-box">
       <i class="fas fa-tools"></i>
       <h3>Security Tools</h3>
       <p>Access our collection of cybersecurity tools and resources to enhance your online safety and knowledge.</p>
       <a href="security-tools.html" class="cta-button">View Tools</a>
     </div>
+
+    <div class="content-box">
+      <i class="fas fa-shield-alt"></i>
+      <h3>Phishing Detection</h3>
+      <p>AI-based detector that analyzes URLs and provides smart recommendations based on detected flags in the link.</p>
+      <a href="phishing-simulation.html" class="cta-button">Try Detection</a>
+    </div>
+
+    <div class="content-box">
+      <i class="fas fa-graduation-cap"></i>
+      <h3>Interactive Courses</h3>
+      <p>Learn about the latest cybersecurity trends and how to protect yourself online. Our courses are designed for all levels.</p>
+      <a href="courses.html" class="cta-button">Explore Courses</a>
+    </div>
   </section>
 
   <footer>
     <p>&copy; Cyber Awareness at IAA | Developed by OBEDY-47</p>
   </footer>
-  <!-- Cyber Assistant Chatbot Embed -->
-<style>
-  #chat-toggle {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background-color: #0a0a0a;
-    color: #00ff00;
-    padding: 12px 18px;
-    border-radius: 50px;
-    cursor: pointer;
-    font-weight: bold;
-    z-index: 9999;
-  }
 
-  #chat-container {
-    display: none;
-    flex-direction: column;
-    position: fixed;
-    bottom: 80px;
-    right: 20px;
-    width: 320px;
-    height: 460px;
-    background: #1c1c1c;
-    color: white;
-    border: 1px solid #444;
-    border-radius: 10px;
-    overflow: hidden;
-    font-family: Arial, sans-serif;
-    z-index: 9999;
-  }
-
-  #chat-header {
-    background-color: #111;
-    padding: 10px;
-    font-weight: bold;
-    text-align: center;
-    color: #00ff00;
-  }
-
-  #chat-messages {
-    flex: 1;
-    padding: 10px;
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    background: #000;
-  }
-
-  .message {
-    display: flex;
-    align-items: flex-start;
-    gap: 8px;
-    font-size: 14px;
-  }
-
-  .user .text {
-    background-color: #007BFF;
-    color: white;
-    border-radius: 12px;
-    padding: 8px 12px;
-    max-width: 70%;
-    align-self: flex-end;
-  }
-
-  .bot .text {
-    background-color: #333;
-    color: #00ff00;
-    border-radius: 12px;
-    padding: 8px 12px;
-    max-width: 70%;
-  }
-
-  .avatar {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-
-  .timestamp {
-    font-size: 11px;
-    color: #aaa;
-    margin-top: 2px;
-  }
-
-  .typing {
-    font-style: italic;
-    color: #999;
-  }
-
-  #chat-input {
-    display: flex;
-    border-top: 1px solid #444;
-    background-color: #1a1a1a;
-  }
-
-  #user-input {
-    flex: 1;
-    padding: 10px;
-    background: #111;
-    color: white;
-    border: none;
-    outline: none;
-  }
-
-  #send-btn {
-    background-color: #00ff00;
-    color: black;
-    border: none;
-    padding: 10px 15px;
-    cursor: pointer;
-  }
-</style>
-
-<div id="chat-toggle">Chat</div>
-
-<div id="chat-container">
-  <div id="chat-header">Cyber Assistant</div>
-  <div id="chat-messages"></div>
-  <div id="chat-input">
-    <input type="text" id="user-input" placeholder="Type a message..." />
-    <button id="send-btn">Send</button>
+  <!-- Chatbot -->
+  <div id="chat-toggle">Chat with Cyber Assistant</div>
+  <div id="chat-container">
+    <div id="chat-header">Cyber Assistant - by OBEDY-47</div>
+    <div id="chat-messages">
+      <div class="message bot">👋 Hello! I’m Cyber Assistant. Ask me anything about cybersecurity, tools, or phishing!</div>
+    </div>
+    <div id="chat-input">
+      <input type="text" id="chat-box" placeholder="Type your message..." />
+      <button onclick="sendMessage()">Send</button>
+    </div>
   </div>
-</div>
 
-<script>
-  document.addEventListener("DOMContentLoaded", () => {
-    const toggleBtn = document.getElementById("chat-toggle");
-    const chatContainer = document.getElementById("chat-container");
-    const sendBtn = document.getElementById("send-btn");
-    const userInput = document.getElementById("user-input");
-    const chatMessages = document.getElementById("chat-messages");
+  <script>
+    const chatToggle = document.getElementById('chat-toggle');
+    const chatContainer = document.getElementById('chat-container');
+    const chatMessages = document.getElementById('chat-messages');
+    const chatBox = document.getElementById('chat-box');
 
-    const botAvatar = "https://i.ibb.co/V9Qn3Pn/hacker-avatar.png";
-    const userAvatar = "https://i.ibb.co/7XSFD3V/user-avatar.png";
-
-    let chatOpened = false;
-
-    toggleBtn.addEventListener("click", () => {
-      const isVisible = chatContainer.style.display === "flex";
-      chatContainer.style.display = isVisible ? "none" : "flex";
-      if (!chatOpened) {
-        addMessage("bot", "Hello! I'm your Cyber Assistant. Ask me anything about cybersecurity, tools, or courses.");
-        chatOpened = true;
-      }
+    chatToggle.addEventListener('click', () => {
+      chatContainer.style.display = chatContainer.style.display === 'flex' ? 'none' : 'flex';
     });
 
-    sendBtn.addEventListener("click", sendMessage);
-    userInput.addEventListener("keypress", (e) => {
-      if (e.key === "Enter") sendMessage();
-    });
-
-    function addMessage(sender, text, typing = false) {
-      const message = document.createElement("div");
-      message.classList.add("message", sender);
-
-      const avatar = document.createElement("img");
-      avatar.classList.add("avatar");
-      avatar.src = sender === "bot" ? botAvatar : userAvatar;
-
-      const content = document.createElement("div");
-      const msgText = document.createElement("div");
-      msgText.classList.add("text");
-      msgText.innerHTML = typing ? "<span class='typing'>Typing...</span>" : text;
-
-      const timestamp = document.createElement("div");
-      timestamp.classList.add("timestamp");
-      timestamp.textContent = new Date().toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' });
-
-      content.appendChild(msgText);
-      content.appendChild(timestamp);
-      message.appendChild(avatar);
-      message.appendChild(content);
-      chatMessages.appendChild(message);
-      chatMessages.scrollTop = chatMessages.scrollHeight;
-
-      return msgText;
-    }
-
-    async function sendMessage() {
-      const message = userInput.value.trim();
+    function sendMessage() {
+      const message = chatBox.value.trim();
       if (!message) return;
 
-      addMessage("user", message);
-      userInput.value = "";
+      const userMessage = document.createElement('div');
+      userMessage.className = 'message user';
+      userMessage.textContent = message;
+      chatMessages.appendChild(userMessage);
+      chatBox.value = '';
 
-      const typingBubble = addMessage("bot", "", true);
-
-      try {
-        const response = await fetch("http://127.0.0.1:5000/chat", {
-          method: "POST",
-          headers: { "Content-Type": "application/json" },
-          body: JSON.stringify({ message })
-        });
-
-        const data = await response.json();
-        setTimeout(() => {
-          typingBubble.innerHTML = data.response || data.error || "No response.";
-        }, 800);
-      } catch (err) {
-        typingBubble.innerHTML = "Error connecting to assistant.";
-      }
+      const botMessage = document.createElement('div');
+      botMessage.className = 'message bot';
+      botMessage.textContent = generateResponse(message);
+      setTimeout(() => {
+        chatMessages.appendChild(botMessage);
+        chatMessages.scrollTop = chatMessages.scrollHeight;
+      }, 500);
     }
-  });
-</script>
+
+    function generateResponse(input) {
+      input = input.toLowerCase();
+      if (input.includes('password')) return '🔐 Use strong, unique passwords! Combine numbers, symbols, and uppercase letters.';
+      if (input.includes('phishing')) return '🎣 Watch for fake emails. Hover over links and verify senders.';
+      if (input.includes('tool')) return '🧰 Visit our Tools page for a password analyzer, generator, and breach checker!';
+      return '🤔 I’m still learning! Try asking about phishing, passwords, or our tools.';
+    }
+  </script>
+
 </body>
 </html>
