--- a/index.html
+++ b/index.html
@@ -311,57 +311,233 @@
   <footer>
     <p>&copy; Cyber Awareness at IAA | Developed by OBEDY-47</p>
   </footer>
+<!-- Chat Toggle Button and Chatbot Container -->
+<style>
+  /* Chat toggle button */
+  #chat-toggle-btn {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    width: 50px;
+    height: 50px;
+    background-color: #00c67a;
+    border-radius: 50%;
+    box-shadow: 0 0 15px rgba(0, 255, 150, 0.7);
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;
+    transition: background-color 0.3s ease;
+  }
+  #chat-toggle-btn:hover {
+    background-color: #00a86b;
+  }
+  #chat-toggle-btn svg {
+    width: 28px;
+    height: 28px;
+    fill: white;
+  }
 
-  <!-- Chatbot -->
-  <div id="chat-toggle">Chat with Cyber Assistant</div>
-  <div id="chat-container">
-    <div id="chat-header">Cyber Assistant - by OBEDY-47</div>
-    <div id="chat-messages">
-      <div class="message bot">👋 Hello! I’m Cyber Assistant. Ask me anything about cybersecurity, tools, or phishing!</div>
-    </div>
-    <div id="chat-input">
-      <input type="text" id="chat-box" placeholder="Type your message..." />
-      <button onclick="sendMessage()">Send</button>
-    </div>
+  /* Chatbot container (hidden by default) */
+  #chatbot-container {
+    position: fixed;
+    bottom: 80px; /* Above toggle */
+    right: 20px;
+    width: 350px;
+    max-height: 80vh;
+    background-color: #1e1e1e;
+    border-radius: 15px;
+    box-shadow: 0 0 15px rgba(0, 255, 150, 0.3);
+    display: none; /* Hidden initially */
+    flex-direction: column;
+    overflow: hidden;
+    font-family: 'Share Tech Mono', monospace;
+    z-index: 9999;
+  }
+
+  #chat-header {
+    background-color: #00c67a;
+    padding: 10px 15px;
+    color: #fff;
+    font-weight: bold;
+    font-size: 1.1rem;
+    font-family: 'Share Tech Mono', monospace;
+  }
+
+  #chat-window {
+    flex: 1;
+    padding: 10px;
+    overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    background-color: #1e1e1e;
+    font-family: 'Share Tech Mono', monospace;
+    color: #ccc;
+    font-size: 0.95rem;
+  }
+
+  .message {
+    max-width: 80%;
+    padding: 10px;
+    border-radius: 10px;
+    line-height: 1.4;
+    position: relative;
+    word-wrap: break-word;
+  }
+
+  .user {
+    align-self: flex-end;
+    background-color: #00c67a;
+    color: white;
+  }
+
+  .bot {
+    align-self: flex-start;
+    background-color: #333;
+    color: white;
+  }
+
+  /* Timestamp style */
+  .timestamp {
+    font-size: 0.7rem;
+    color: #66ffb3;
+    position: absolute;
+    bottom: 5px;
+    right: 10px;
+    font-family: 'Share Tech Mono', monospace;
+    opacity: 0.7;
+  }
+
+  #chat-input {
+    display: flex;
+    padding: 10px;
+    background-color: #1a1a1a;
+    font-family: 'Share Tech Mono', monospace;
+  }
+
+  #user-input {
+    flex: 1;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    outline: none;
+    font-size: 1rem;
+    background-color: #2c2c2c;
+    color: white;
+    font-family: 'Share Tech Mono', monospace;
+  }
+
+  #send-btn {
+    margin-left: 10px;
+    background-color: #00c67a;
+    color: white;
+    border: none;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-weight: bold;
+    font-family: 'Share Tech Mono', monospace;
+    transition: background-color 0.3s ease;
+  }
+
+  #send-btn:hover {
+    background-color: #00a86b;
+  }
+</style>
+
+<!-- Toggle Button -->
+<div id="chat-toggle-btn" title="Open Chat">
+  <!-- Chat bubble SVG icon -->
+  <svg viewBox="0 0 24 24" aria-hidden="true">
+    <path d="M20 2H4a2 2 0 00-2 2v16l4-4h14a2 2 0 002-2V4a2 2 0 00-2-2z"></path>
+  </svg>
+</div>
+
+<!-- Chatbot container -->
+<div id="chatbot-container">
+  <div id="chat-header">Cyber Assistant 🤖</div>
+  <div id="chat-window"></div>
+  <div id="chat-input">
+    <input type="text" id="user-input" placeholder="Ask something..." autocomplete="off" />
+    <button id="send-btn">Send</button>
   </div>
+</div>
 
-  <script>
-    const chatToggle = document.getElementById('chat-toggle');
-    const chatContainer = document.getElementById('chat-container');
-    const chatMessages = document.getElementById('chat-messages');
-    const chatBox = document.getElementById('chat-box');
+<script>
+  const toggleBtn = document.getElementById("chat-toggle-btn");
+  const chatbotContainer = document.getElementById("chatbot-container");
+  const chatWindow = document.getElementById("chat-window");
+  const inputField = document.getElementById("user-input");
+  const sendBtn = document.getElementById("send-btn");
 
-    chatToggle.addEventListener('click', () => {
-      chatContainer.style.display = chatContainer.style.display === 'flex' ? 'none' : 'flex';
-    });
-
-    function sendMessage() {
-      const message = chatBox.value.trim();
-      if (!message) return;
-
-      const userMessage = document.createElement('div');
-      userMessage.className = 'message user';
-      userMessage.textContent = message;
-      chatMessages.appendChild(userMessage);
-      chatBox.value = '';
-
-      const botMessage = document.createElement('div');
-      botMessage.className = 'message bot';
-      botMessage.textContent = generateResponse(message);
-      setTimeout(() => {
-        chatMessages.appendChild(botMessage);
-        chatMessages.scrollTop = chatMessages.scrollHeight;
-      }, 500);
+  // Toggle chatbot open/close
+  toggleBtn.addEventListener("click", () => {
+    if (chatbotContainer.style.display === "flex") {
+      chatbotContainer.style.display = "none";
+      toggleBtn.title = "Open Chat";
+    } else {
+      chatbotContainer.style.display = "flex";
+      toggleBtn.title = "Close Chat";
+      inputField.focus();
     }
+  });
 
-    function generateResponse(input) {
-      input = input.toLowerCase();
-      if (input.includes('password')) return '🔐 Use strong, unique passwords! Combine numbers, symbols, and uppercase letters.';
-      if (input.includes('phishing')) return '🎣 Watch for fake emails. Hover over links and verify senders.';
-      if (input.includes('tool')) return '🧰 Visit our Tools page for a password analyzer, generator, and breach checker!';
-      return '🤔 I’m still learning! Try asking about phishing, passwords, or our tools.';
+  // Append message with timestamp
+  function appendMessage(sender, text) {
+    const msg = document.createElement("div");
+    msg.classList.add("message");
+    msg.classList.add(sender === "user" ? "user" : "bot");
+
+    const messageText = document.createTextNode(text);
+    msg.appendChild(messageText);
+
+    const timestamp = document.createElement("span");
+    timestamp.classList.add("timestamp");
+    const now = new Date();
+    timestamp.textContent = now.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+    msg.appendChild(timestamp);
+
+    chatWindow.appendChild(msg);
+    chatWindow.scrollTop = chatWindow.scrollHeight;
+  }
+
+  // Send message logic
+  async function sendMessage() {
+    const userText = inputField.value.trim();
+    if (!userText) return;
+
+    appendMessage("user", userText);
+    inputField.value = "";
+
+    try {
+      const response = await fetch("http://127.0.0.1:5000/chat", {
+        method: "POST",
+        headers: {
+          "Content-Type": "application/json"
+        },
+        body: JSON.stringify({ message: userText })
+      });
+
+      const data = await response.json();
+      if (data.response) {
+        appendMessage("bot", data.response);
+      } else {
+        appendMessage("bot", "❌ Error: Could not get a response.");
+      }
+    } catch (error) {
+      appendMessage("bot", "⚠ Failed to connect to server.");
     }
-  </script>
+  }
+
+  sendBtn.addEventListener("click", sendMessage);
+
+  // Enter key sends message
+  inputField.addEventListener("keypress", function (e) {
+    if (e.key === "Enter") sendMessage();
+  });
+</script>
 
 </body>
 </html>
