--- a/index.html
+++ b/index.html
@@ -274,8 +274,8 @@
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="courses.html">Courses</a>
-      <a href="security-tools.html">Security Tools</a>
+      <a href="courses.html">Email Checker</a>
+      <a href="security-tools.html">Password Tools</a>
       <a href="phishing-simulation.html">Phishing Detection</a>
     </nav>
   </header>
@@ -288,7 +288,7 @@
   <section class="content-section">
     <div class="content-box">
       <i class="fas fa-tools"></i>
-      <h3>Security Tools</h3>
+      <h3>Password Tools</h3>
       <p>Access our collection of cybersecurity tools and resources to enhance your online safety and knowledge.</p>
       <a href="security-tools.html" class="cta-button">View Tools</a>
     </div>
@@ -302,9 +302,9 @@
 
     <div class="content-box">
       <i class="fas fa-graduation-cap"></i>
-      <h3>Interactive Courses</h3>
-      <p>Learn about the latest cybersecurity trends and how to protect yourself online. Our courses are designed for all levels.</p>
-      <a href="courses.html" class="cta-button">Explore Courses</a>
+      <h3>Interactive Email Checking</h3>
+      <p>Check whether your email has been involved in any online data breach. This will help you stay in a safer digital world.</p>
+      <a href="courses.html" class="cta-button">Check your email</a>
     </div>
   </section>
 
