--- a/security-tools.html
+++ b/security-tools.html
@@ -123,14 +123,15 @@
 <body>
   <header>
     <h1>Cyber Awareness</h1>
-    <p>IAA Training</p>
+    <p>Institute of Accountancy Arusha (IAA)</p>
     <nav>
       <a href="index.html">Home</a>
       <a href="about.html">About</a>
-      <a href="courses.html">Courses</a>
-      <a href="security-tools.html">Security Tools</a>
-      <a href="phishing-simulation.html">Phishing Simulation</a>
+      <a href="courses.html">Email Checker</a>
+      <a href="security-tools.html">Password Tools</a>
+      <a href="phishing-simulation.html">Phishing Detection</a>
     </nav>
+  </header>
   </header>  <div class="container">
     <h2>Security Enhancement Tools</h2>
     <p style="text-align:center;">Use these tools to assess and improve your cybersecurity hygiene.</p>
@@ -170,17 +171,6 @@
   </div>
 </div>
 
-<!-- Email Breach Checker -->
-<div class="tool-section">
-  <h3>Email Breach Checker</h3>
-  <p class="description">Check if your email has been exposed in recent data breaches (simulated).</p>
-  <button class="toggle-btn" onclick="toggleTool('emailTool')">Check Email</button>
-  <div id="emailTool" class="tool-content">
-    <input type="email" id="emailInput" placeholder="Enter your email">
-    <button class="toggle-btn" onclick="checkEmail()">Check</button>
-    <div id="emailResult" class="result-box"></div>
-  </div>
-</div>
 
   </div>  <footer>
     <p>&copy; Cyber Awareness at IAA | Developed by OBEDY-47</p>
